<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <EditText
            android:id="@+id/login_phone"
            style="@style/generalFonts.editext"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone" >

            <requestFocus />
        </EditText>
     <EditText
            android:id="@+id/login_password"
            style="@style/generalFonts.editext"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" >

            <requestFocus />
        </EditText>
     
     <Button
            android:id="@+id/btn_login_login	"
            style="@style/generalFonts.buttons"
            android:ems="10"
             android:drawableRight="@drawable/ic_next"
             android:padding="5dp"
            android:text="@string/login" />
      		
		<LinearLayout android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal">
             
        <TextView
            android:id="@+id/txtpointlogin"
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"/>
<Button
            android:id="@+id/btn_login_signup"
             android:ems="10"
             android:layout_width="50dp"
             android:layout_height="50dp"
              android:layout_marginLeft="10dp"
             android:background="@drawable/ic_next"
           />
	
 
		    
		</LinearLayout>
    

</LinearLayout>
