<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/general.textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/assetname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/assetname" />

        <TextView
            android:id="@+id/showgroupname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/groupname" />

    </RelativeLayout>

     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >

             <ListView
                 android:id="@+id/individualasset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
             </ListView>

         </LinearLayout>
     </ScrollView>
     <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:background="@color/widgetbg"
				    android:layout_margin="10dp" >

				    <TextView
				        android:id="@+id/datecreated"
				        style="@style/textview_table.background"
				        android:text="@string/datecreated" />

				    <TextView
				        android:id="@+id/showdatecreated"
				        style="@style/textview_table"
				        android:hint="@string/datecreated" />

				   
				    
				</LinearLayout>

</LinearLayout>
